--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.android.support:palette-v7:21.0.3'
+    compile files('libs/volley.jar')
 }
