--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:name=".HappyApplication"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".LoadingDataSplashScreen"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +23,11 @@
         <activity android:name=".materialhappy.happybaby.com.materialhappy.contact.ContactListActivity">
 
         </activity>
-
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            >
+        </activity>
     </application>
 
 </manifest>
