--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
         }
     }
 }
+repositories {
+    maven { url "http://dl.bintray.com/populov/maven" }
+    mavenCentral()
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -26,4 +30,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.android.support:palette-v7:21.0.3'
     compile files('libs/volley.jar')
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
