--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:name=".HappyApplication"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".LoadingDataSplashScreen"
+            android:name=".materialhappy.happybaby.com.materialhappy.init.LoadBaseDataSplashScreenActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             >
             <intent-filter>
@@ -21,13 +21,23 @@
             </intent-filter>
         </activity>
         <activity android:name=".materialhappy.happybaby.com.materialhappy.contact.ContactListActivity">
-
         </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             >
         </activity>
+    <!--    <activity
+        android:name=".materialhappy.happybaby.com.materialhappy.init.WalkthroughActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/StyledIndicators"
+        >
+        </activity>-->
+        <activity
+            android:name=".materialhappy.happybaby.com.materialhappy.init.TermOfUseActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            >
+            </activity>
     </application>
 
 </manifest>
