--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".materialhappy.happybaby.com.materialhappy.contact.ContactListActivity">
         </activity>
+        <activity android:name=".materialhappy.happybaby.com.materialhappy.contact.ContactDetailActivity">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
